gcc/testsuite/rust/rustc/ui/associated-type-bounds/issue-71443-1.rs
#![feature(associated_type_bounds)]

struct Incorrect;

fn hello<F: for<'a> Iterator<Item: 'a>>() {
    Incorrect // { dg-error ".E0308." "" { target *-*-* } }
}

fn main() {}

